# ai-travel-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/backend/migrations/: env.py  script.py.mako
apps/backend/migrations/versions/: 20260723_0001_initial_schema.py
apps/backend/src/app/: __init__.py  dependencies.py  main.py  worker.py
apps/backend/src/app/agents/: __init__.py  graph.py  planner.py  state.py
apps/backend/src/app/api/routes/: agent_runs.py  approvals.py  conversations.py  health.py  itineraries.py  memories.py  preferences.py  trips.py
apps/backend/src/app/core/: config.py  logging.py  metrics.py  observability.py  security.py
apps/backend/src/app/db/: __init__.py  base.py  bootstrap.py  session.py
apps/backend/src/app/db/models/: __init__.py  agent_run.py  approval.py  booking.py  conversation.py  enums.py  memory.py  message.py  operations.py  payment.py  planning.py  preference.py  tool_call.py  trip.py  user.py
apps/backend/src/app/infrastructure/: redis.py  vector_store.py
apps/backend/src/app/mcp_gateway/: __init__.py  client.py  policy.py
apps/backend/src/app/schemas/: agent_run.py  approval.py  conversation.py  itinerary.py  memory.py  preference.py  trip.py
apps/backend/src/app/services/: __init__.py  agent_runs.py  approvals.py  conversations.py  identity.py  itineraries.py  memories.py  outbox.py  preferences.py  tool_calls.py  trips.py
apps/backend/tests/: test_application_services.py  test_core_workflows.py  test_database_models.py  test_health.py  test_memory_itinerary.py  test_migrations.py  test_tool_workflow.py
docs/: security.md
(+31 files in other folders)
