[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travel-agent-backend"
version = "0.1.0"
description = "Backend service for the AI Travel Agent platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16,<2.0",
    "fastapi>=0.116,<1.0",
    "httpx>=0.28,<1.0",
    "langgraph>=1.0,<2.0",
    "langgraph-checkpoint-postgres>=3.0,<4.0",
    "mcp>=1.12,<2.0",
    "openai>=2.0,<3.0",
    "pydantic-settings>=2.10,<3.0",
    "psycopg[binary,pool]>=3.2,<4.0",
    "pyjwt[crypto]>=2.10,<3.0",
    "qdrant-client>=1.15,<2.0",
    "redis>=6.2,<8.0",
    "sse-starlette>=3.0,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[dependency-groups]
dev = [
    "black>=25.1,<27.0",
    "mypy>=1.17,<2.0",
    "pytest>=8.4,<10.0",
    "pytest-asyncio>=1.1,<2.0",
    "pytest-cov>=6.2,<8.0",
    "ruff>=0.12,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
pythonpath = ["src"]
